# example-seed-beetle

./: .copier-answers.yml  .gitattributes  .gitignore  .lfsconfig  CHANGELOG.md  CITATION.cff  LICENSE-MIT.md  README.md  datapackage.json  environment.yml  main.py  pyproject.toml
.github/workflows/: build-data-package.yml
data-raw/: data-ready-redcap.csv  data-ready.csv  data.tsv  test-data.csv
docs/: git-lfs.qmd
resources/seed-beetle-metabolic-rate/: data.parquet
resources/seed-beetle-metabolic-rate/batch/: 2025-07-18T122301Z-05b8f7e5-529c-46ad-abe8-86b930f060ba.parquet
scripts/: __init__.py  clean-data.py  convert-with-core-redcap.py  convert-with-core.py  create-datapackage-json.py  create-resource.py  download-data.py  edit-datapackage-json.py  import-from-redcap.py  package_properties.py  properties.py  resource_properties.py  resource_properties_metabolic_rate.py  resource_properties_seed_beetle_metabolic_rate.py
seed-beetle-study/: datapackage.json
