[project]
name = "example-seed-beetle"
version = "0.1.0"
description = "Add your description here"
authors = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
]
maintainers = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.27.0",
    "pyjanitor>=0.31.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "seedcase-sprout>=0.46.6",
]

[project.urls]
issues = "https://github.com/seedcase-project/example-seed-beetle/issues"
repository = "https://github.com/seedcase-project/example-seed-beetle"

[dependency-groups]
dev = [
    "commitizen>=4.5.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]
